[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Themes/DefTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/TitleScreen/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TitleScreen/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TitleScreen/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/fonts/AlfaSlabOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/TitleScreen/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/TitleScreen/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://Assets/Music/Tactical War Loop.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 47
outline_size = 2
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "fade_into_LevelSelectionScreen"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "changeToLevelSelectionScreen"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_into_SettingsScreen"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "changeToSettingsScreen"
} ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 520.0
margin_bottom = 65.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
custom_fonts/font = SubResource( 1 )
text = "TITLES ARE A PAIN"

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 69.0
margin_right = 520.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="NewGameButton" parent="Menu/Buttons" instance=ExtResource( 2 )]
margin_top = 50.0
margin_bottom = 80.0

[node name="OptionsButton" parent="Menu/Buttons" instance=ExtResource( 3 )]
margin_top = 90.0
margin_bottom = 120.0

[node name="ExitButton" parent="Menu/Buttons" instance=ExtResource( 4 )]
margin_top = 130.0
margin_bottom = 160.0

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AnimationPlayer" parent="FadeIn" index="0"]
anims/fade_into_LevelSelectionScreen = SubResource( 2 )
anims/fade_into_SettingsScreen = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="pressed" from="Menu/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]

[editable path="FadeIn"]
